--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background3.jpg);
+    background-image: url(background3.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -385,7 +385,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/background3.jpg);
+        background-image: url(background3.jpg);
     }
 
     .header-text{
